--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "easy-datetime-fmt": "^0.0.2",
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
